Add firebase and backend logics

--- a/app/src/main/res/layout/activity_share_diary.xml
+++ b/app/src/main/res/layout/activity_share_diary.xml
@@ -45,7 +45,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.AppCompatEditText
+                <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/addStory"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -88,7 +88,7 @@
                     android:layout_weight=".1" />
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/btnSave"
+                    android:id="@+id/buttonshare"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight=".45"
