--- a/app/src/main/res/layout/item_group_hug.xml
+++ b/app/src/main/res/layout/item_group_hug.xml
@@ -26,7 +26,7 @@
             android:id="@+id/menu"
             android:layout_width="25dp"
             android:layout_height="25dp"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
@@ -44,7 +44,6 @@
             android:layout_below="@+id/userName"
             android:fontFamily="@font/poppins_regular"
             app:color="@color/black"
-            app:hidden="true"
             app:justificationMode="1"
             app:limit="5"
             app:readMoreText="Read More"
