--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -46,7 +46,7 @@
                 android:textAllCaps="true" />
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edittextfname"
+                android:id="@+id/edFirstName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
@@ -63,7 +63,7 @@
                 android:textAllCaps="true" />
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edittextlname"
+                android:id="@+id/edLastName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPersonName"
@@ -79,11 +79,20 @@
                 android:textAllCaps="true" />
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edittextUsername"
+                android:id="@+id/edUserName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="text|textPersonName"
                 android:textColor="@color/black" />
+
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/userNameStatus"
+                style="@style/TextAppearance.AppCompat.Caption"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_regular" />
+
 
             <androidx.appcompat.widget.AppCompatTextView
                 style="@style/TextAppearance.AppCompat.Small"
@@ -95,7 +104,7 @@
                 android:textAllCaps="true" />
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edittextEmail"
+                android:id="@+id/edEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textEmailAddress"
@@ -111,7 +120,7 @@
                 android:textAllCaps="true" />
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edittextPassword"
+                android:id="@+id/edPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
@@ -127,14 +136,14 @@
                 android:textAllCaps="true" />
 
             <androidx.appcompat.widget.AppCompatEditText
-                android:id="@+id/edittextConfirmPassword"
+                android:id="@+id/edConfirmPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"
                 android:textColor="@color/black" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnSignUp"
+                android:id="@+id/buttonSignUp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="20dp"
@@ -203,4 +212,13 @@
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
+
+
+    <com.sokoldev.griefresort.utils.BounceLoadingView
+        android:id="@+id/loadingView"
+        android:layout_width="50dp"
+        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true" />
+
 </RelativeLayout>
