--- a/app/src/main/res/layout/activity_add_reminder.xml
+++ b/app/src/main/res/layout/activity_add_reminder.xml
@@ -42,7 +42,7 @@
         android:layout_marginVertical="20dp"
         android:backgroundTint="#ccc"
         android:gravity="center"
-        android:hint="Enter name of special date here"
+        android:hint="@string/enter_name_of_special_date_here"
         android:inputType="textEmailAddress"
         android:textColor="@color/black"
         android:textColorHint="#ccc" />
@@ -71,7 +71,7 @@
             android:layout_weight=".45"
             android:background="@drawable/bg_title"
             android:gravity="center"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:textAlignment="center"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary" />
