--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/name"
                 android:layout_marginHorizontal="5dp"
                 android:textColor="@color/black"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="8dp"
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -37,7 +37,7 @@
                 android:paddingHorizontal="10dp"
                 android:layout_marginHorizontal="5dp"
                 android:text="Sorry to hear that"
-                android:layout_marginBottom="5dp"
+                android:layout_marginBottom="8dp"
                 android:textColor="@color/black" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
         android:text="Reply"
+        android:visibility="gone"
         android:textStyle="bold"
         android:padding="5dp"
         android:textColor="@color/black" />
