--- a/app/src/main/res/layout/activity_share_diary.xml
+++ b/app/src/main/res/layout/activity_share_diary.xml
@@ -53,9 +53,9 @@
                 android:layout_marginVertical="20dp"
                 android:background="@drawable/bg_title"
                 android:gravity="start"
-                android:hint="Share your thoughts here"
+                android:hint="Share your thoughts here..."
                 android:inputType="textMultiLine"
-                android:minLines="15"
+                android:minLines="8"
                 android:padding="10dp"
                 android:textColor="@color/black"
                 android:textColorHint="#ccc" />
