--- a/app/src/main/res/layout/fragment_memory_box.xml
+++ b/app/src/main/res/layout/fragment_memory_box.xml
@@ -71,4 +71,15 @@
 
     </androidx.core.widget.NestedScrollView>
 
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:indicatorColor="@color/colorPrimaryDark" />
+
+
 </RelativeLayout>
