updated code for 3d design

--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/grey"
+    android:background="#FFF"
     tools:context=".ui.activities.ItemListActivity">
 
     <RelativeLayout
@@ -53,6 +53,7 @@
         android:id="@+id/rvItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        tools:listitem="@layout/item_song"
         android:layout_below="@id/chooseText" />
 
 
