--- a/app/src/main/res/layout/item_books.xml
+++ b/app/src/main/res/layout/item_books.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    app:cardCornerRadius="4dp"
+    app:cardElevation="24dp"
     android:layout_margin="16dp"
-
-    app:cardCornerRadius="8dp"
-    app:cardElevation="12dp">
+    app:cardUseCompatPadding="false">
 
     <LinearLayout
         android:layout_width="match_parent"
