--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -9,7 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#E7E7E7"
+        app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
@@ -25,7 +25,7 @@
                 android:text="Sheila"
                 android:id="@+id/name"
                 android:layout_marginHorizontal="5dp"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:layout_marginTop="8dp"
                 android:textStyle="bold" />
 
@@ -38,7 +38,7 @@
                 android:layout_marginHorizontal="5dp"
                 android:text="Sorry to hear that"
                 android:layout_marginBottom="8dp"
-                android:textColor="@color/black" />
+                android:textColor="@color/white" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
