--- a/app/src/main/res/layout/item_group_hug.xml
+++ b/app/src/main/res/layout/item_group_hug.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
-    app:cardElevation="2dp"
-    app:cardUseCompatPadding="true">
+    app:cardCornerRadius="4dp"
+    app:cardElevation="24dp"
+    android:layout_margin="16dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
