--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -43,13 +43,12 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/reply"
+        android:id="@+id/delete"
         style="@style/TextAppearance.AppCompat.Small"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
-        android:text="Reply"
-        android:visibility="gone"
+        android:text="Delete"
         android:textStyle="bold"
         android:padding="5dp"
         android:textColor="@color/black" />
