--- a/app/src/main/res/layout/item_memory_box.xml
+++ b/app/src/main/res/layout/item_memory_box.xml
@@ -3,21 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
     app:cardCornerRadius="8dp"
-    app:cardElevation="24dp">
+    app:cardElevation="16dp"
+    android:layout_margin="8dp"
+    app:cardBackgroundColor="@color/white">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:padding="6dp">
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"
             android:src="@drawable/img2" />
-
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="#92000000" />
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/memoryType"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerInParent="true"
+            android:elevation="10dp"
+            android:src="@drawable/ic_video"
+            android:visibility="gone" />
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/menu"
@@ -28,10 +40,9 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:background="#33CCCCCC"
+            android:background="@color/colorPrimary"
             android:padding="4dp"
             android:src="@drawable/ic_menu_horizontal" />
-
     </RelativeLayout>
 
 
