--- a/app/src/main/res/layout/fragment_my_diary.xml
+++ b/app/src/main/res/layout/fragment_my_diary.xml
@@ -23,6 +23,7 @@
                 android:background="@drawable/bg_title">
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/title"
                     style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -33,6 +34,19 @@
                     android:gravity="center"
                     android:text="@string/my_diary_title"
                     android:textColor="@color/colorPrimary" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    style="@style/TextAppearance.AppCompat.Caption"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/title"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:gravity="center"
+                    android:text="@string/my_diary_title_note"
+                    android:textColor="@color/colorGray" />
 
             </RelativeLayout>
 
@@ -56,10 +70,29 @@
 
             </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/saveHere"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                app:cardBackgroundColor="@color/colorPrimary"
+                app:cardCornerRadius="35dp">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    style="@style/TextAppearance.AppCompat.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/poppins_regular"
+                    android:text="@string/my_diary_desc_save"
+                    android:textColor="@color/white" />
+
+            </androidx.cardview.widget.CardView>
+
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rvMyDiary"
                 android:layout_width="match_parent"
+                android:layout_marginTop="16dp"
                 android:layout_height="wrap_content" />
 
 
