--- a/app/src/main/res/layout/fragment_group_hug.xml
+++ b/app/src/main/res/layout/fragment_group_hug.xml
@@ -23,6 +23,7 @@
                 android:background="@drawable/bg_title">
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/title"
                     style="@style/TextAppearance.AppCompat.Small"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -33,6 +34,22 @@
                     android:gravity="center"
                     android:text="@string/group_title"
                     android:textColor="@color/colorPrimary" />
+
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    style="@style/TextAppearance.AppCompat.Caption"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/title"
+                    android:layout_marginHorizontal="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="20dp"
+                    android:fontFamily="@font/poppins_regular"
+                    android:gravity="center"
+                    android:text="@string/group_title_note"
+                    android:textColor="@color/colorGray"
+                    android:textStyle="italic" />
+
 
             </RelativeLayout>
 
