--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/groupHug"
         android:icon="@drawable/hug_icon_selector"
-        android:title="@string/group_hug" />
+        android:title="Dreams/Signs" />
 
     <item
         android:id="@+id/memoryBox"
