--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,6 +21,9 @@
         <action
             android:id="@+id/action_memoryBox_to_settingFragment"
             app:destination="@id/settingFragment" />
+        <action
+            android:id="@+id/action_memoryBox_to_singleMemoryFragment"
+            app:destination="@id/singleMemoryFragment" />
     </fragment>
     <fragment
         android:id="@+id/remindMe"
@@ -66,9 +69,6 @@
         <action
             android:id="@+id/action_settingFragment_to_changePasswordFragment2"
             app:destination="@id/changePasswordFragment2" />
-        <action
-            android:id="@+id/action_settingFragment_to_faqsFragment2"
-            app:destination="@id/faqsFragment2" />
     </fragment>
 
     <fragment
@@ -117,14 +117,11 @@
             android:id="@+id/action_deleteAccountFragment_to_contactUsFragment"
             app:destination="@id/contactUsFragment" />
     </fragment>
-
     <fragment
-        android:id="@+id/faqsFragment2"
-        android:name="com.sokoldev.griefresort.ui.fragments.information.FaqsFragment"
-        android:label="FaqsFragment">
-        <action
-            android:id="@+id/action_faqsFragment2_to_contactUsFragment"
-            app:destination="@id/contactUsFragment" />
-    </fragment>
+        android:id="@+id/singleMemoryFragment"
+        android:name="com.sokoldev.griefresort.ui.fragments.memorybox.SingleMemoryFragment"
+        android:label="fragment_single_memory"
+        tools:layout="@layout/fragment_single_memory" />
+
 
 </navigation>
