--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -87,6 +87,16 @@
             android:inputType="textVisiblePassword"
             android:textColor="@color/black" />
 
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:indeterminate="true"
+            android:layout_marginTop="16dp"
+            android:layout_gravity="center"
+            android:visibility="gone"
+            app:indicatorColor="@color/colorPrimaryDark" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnChangePassword"
